
One too many....
----------------------------------------------------------------------
Wed Jul  3 13:49:27 2002                        Michael Jennings (mej)

Fixed a bug in libscream that caused remote screen sessions to be
resumed with, e.g., "-e ^Uu_" instead of "-e ^Uu".

Applied a bug fix from Bill Allombert <allomber@math.u-bordeaux.fr>
where I was using the wrong variable for loading the icon file from
disk.

Also fixed a problem where PrintScreen would cause Eterm to exit.
Pointed out by Laurence J. Lane <ljlane@debian.org>.
----------------------------------------------------------------------
Thu Jul 11 20:03:23 2002                        Michael Jennings (mej)

Each side of an || must have a valid shell command.
----------------------------------------------------------------------
Thu Jul 11 20:39:28 2002                        Michael Jennings (mej)

Addition to last fix.  Also, we're going to specify error messages
that *should* be shown and ignore others, not show all but a select
few.  This helps with the status line issue.
----------------------------------------------------------------------
Sun Jul 14 00:49:34 2002                        Michael Jennings (mej)

Fixed bug pointed out by JC Wong <catalyst@gmx.net> where resizing a
window which had had transparency toggled on would reveal a black spot
at the bottom of the scrollbar.
----------------------------------------------------------------------
Tue Aug 13 22:55:58 2002                        Michael Jennings (mej)

Documentation fix from Jim Lewis <jel@louie.cc>.
----------------------------------------------------------------------
Thu Sep  5 21:47:57 2002                        Michael Jennings (mej)

Updates to the termcap/terminfo stuff to make everything work on *BSD.
Thanks to Thomas Dickey <dickey@herndon4.his.com> and Will Yardley
<william@hq.newdream.net> for their assistance with this.
----------------------------------------------------------------------